--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
 		<style>
 			#cards-section {
-				background: linear-gradient(-45deg, #333333, #424242, #2C3E50, #4C4C4C);
+				background: linear-gradient(-45deg, #FFBDA9, #FFEDF4, #B3EBFF, #C9FFF2);
 				background-size: 400% 400%;
 				animation: gradient 3s ease infinite;
-				color: white
+				color: black
 			}
 			body {
-				background: linear-gradient(-45deg, #333333, #424242, #2C3E50, #4C4C4C);
+				background: linear-gradient(-45deg, #FFBDA9, #FFEDF4, #B3EBFF, #C9FFF2);
 				background-size: 400% 400%;
 				animation: gradient 3s ease infinite;
 				height: 100vh;
