--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 				<div class="contact">
 					<div class="contact-headline">
 						<h3>Want to get in touch?<br />Drop me a message!</h3>
-						<p class="paragraph-light">Send your message below or email me at itskathleenlara@gmail.com to
+						<p class="paragraph-light">Send your message below or email me at oktaydabak54@gmail.com to
 							get immediate response.</p>
 					</div>
 					<div class="contact-form-wrap">
