--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div class="text-block-41">Hello, my name is</div>
 				<h1 class="heading-20"><strong class="name">Boran Oktay Dabak</strong></h1>
 				<div class="text-block-42"><strong class="bold-text-8"> IT • DS </strong></div>
-				<p class="bio">I&#x27;m a Turkey,Istanbul based Data Scientist & Software Developer .🤓 My current focus
+				<p class="bio">I'm a Data Scientist & Software Developer Turkey,Istanbul based.🤓 My current focus
 					is on developing efficient <strong>Machine Learning</strong> <strong>Algorithms</strong> and
 					<strong>Software Automation System</strong> to develop the best program for my clients and provide
 					added value to their companies..🤖</p>
@@ -175,7 +175,7 @@
 							</a>
 						</div>
 						<div class="blog-preview-related-2"><img lazy="loading=&quot;lazy&quot;" loading="eager"
-								src="https://i9.ytimg.com/vi_webp/wD9YnjjiUzo/mqdefault.webp?v=6555d33b&sqp=CKjNl6sG&rs=AOn4CLDletI1sptOJyA0vqFFwIEkhQXLig"
+								src="./aysu.png"
 								alt="" /></div>
 					</div>
 					<div data-w-id="d68495ab-5476-11d8-8be5-dabbb979b4ae" class="article-2">
@@ -278,7 +278,7 @@
 							</a>
 						</div>
 						<div class="blog-preview-related-2"><img loading="lazy"
-								src="https://i9.ytimg.com/vi_webp/duvY7AE5rOQ/mqdefault.webp?v=6544c042&sqp=CNzdl6sG&rs=AOn4CLA-MbepgFyVrjPtH-QvcOM1IbyPCA"
+								src="./sırb.png"
 								alt="" /></div>
 					</div>
 					<div data-w-id="c7980423-b81d-b506-50ef-a36ee660c7ca" class="article-2">
@@ -298,7 +298,7 @@
 							</a>
 						</div>
 						<div class="blog-preview-related-2"><img loading="lazy"
-								src="https://i9.ytimg.com/vi/ZenO7pnn4Sw/mqdefault.jpg?v=65397319&sqp=CIjgl6sG&rs=AOn4CLDx2vBZ5X2DmGk52ueSpgVm9RVW3Q"
+								src="./emir.jpg"
 								alt="" /></div>
 					</div>
 					<div data-w-id="c7980423-b81d-b506-50ef-a36ee660c79b" class="article-2">
@@ -316,7 +316,7 @@
 							</a>
 						</div>
 						<div class="blog-preview-related-2"><img loading="lazy"
-								src="https://i9.ytimg.com/vi/kp-ZbVWi6xY/mqdefault.jpg?v=655aeb68&sqp=CIjgl6sG&rs=AOn4CLBnp6jBw3rXD9f64JLt7F39pN2fCw"
+								src="./mqdefault.jpg"
 								alt="new-year-in-bullets" /></div>
 					</div>
 					
